# QtBliLiveDanmaku

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: main.qml
src/: DanmakuScreen.cpp  DanmakuScreen.hpp  MyClass.cpp  MyClass.hpp  main.cpp
